--- a/assets/2019-11-30/Pipfile
+++ b/assets/2019-11-30/Pipfile
@@ -14,6 +14,9 @@ grpcio = "*"
 grpcio-tools = "*"
 invoke = "*"
 requests = "*"
+flask-opentracing = "*"
+jaeger-client = "*"
+grpcio-opentracing = "*"
 
 [requires]
 python_version = "3.7"
