--- a/assets/2019-11-30/requirements.txt
+++ b/assets/2019-11-30/requirements.txt
@@ -10,6 +10,8 @@ invoke==1.3.0
 itsdangerous==1.1.0
 jinja2==2.10.3
 markupsafe==1.1.1
+opentelemetry-api==0.2a0
+opentelemetry-sdk==0.2a0
 protobuf==3.11.0
 requests==2.22.0
 six==1.13.0
