Expose to jaeger and flask to public

--- a/assets/2019-11-30/traefik/traefik.toml
+++ b/assets/2019-11-30/traefik/traefik.toml
@@ -28,3 +28,7 @@ dashboard = true
   # http should be redirected to https
   [entryPoints.http]
   address = ":80"
+
+[tracing]
+  [tracing.jaeger]
+    localAgentHostPort = "jaeger:6831"
