--- a/assets/2019-11-30/docker-compose.yml
+++ b/assets/2019-11-30/docker-compose.yml
@@ -49,7 +49,7 @@ services:
 
   api:
     <<: *base
-    command: flask run
+    command: flask run -h 0.0.0.0
     expose:
       - 5000
     labels:
