A working deployment script

--- a/assets/2020-01-18/Pipfile
+++ b/assets/2020-01-18/Pipfile
@@ -18,6 +18,8 @@ django-bootstrap4 = "*"
 opentelemetry-api = "*"
 opentelemetry-sdk = "*"
 opentelemetry-ext-wsgi = "*"
+gunicorn = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.7"
